[gd_scene load_steps=26 format=3 uid="uid://c0lapsmxk0rpu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_cfdpi"]
[ext_resource type="Texture2D" uid="uid://bgixd66hrmgx2" path="res://assets/AnimationSheet_Character.png" id="2_u1hl7"]
[ext_resource type="PackedScene" uid="uid://bjju0is7nbigm" path="res://scenes/fishing_rod.tscn" id="3_ha4rm"]
[ext_resource type="Texture2D" uid="uid://drvhhx2gvfn57" path="res://assets/def_fishing_rod.png" id="4_dw15k"]
[ext_resource type="Texture2D" uid="uid://cg2onwkdv3b0x" path="res://assets/fishingrod_no_string.png" id="5_wwgf2"]
[ext_resource type="Texture2D" uid="uid://cwoqbxpxp0as8" path="res://assets/emark.png" id="6_gxe61"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3n57k"]
atlas = ExtResource("2_u1hl7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtsu3"]
atlas = ExtResource("2_u1hl7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba5w3"]
atlas = ExtResource("2_u1hl7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3erw"]
atlas = ExtResource("2_u1hl7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifb0o"]
atlas = ExtResource("2_u1hl7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtx6l"]
atlas = ExtResource("2_u1hl7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xso0x"]
atlas = ExtResource("2_u1hl7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3561a"]
atlas = ExtResource("2_u1hl7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pshx"]
atlas = ExtResource("2_u1hl7")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6igjs"]
atlas = ExtResource("2_u1hl7")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2ped"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n57k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtsu3")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba5w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3erw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifb0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtx6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xso0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3561a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pshx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6igjs")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ew1q4"]
size = Vector2(11, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dycmf"]
size = Vector2(16, 30)

[sub_resource type="Animation" id="Animation_jbqof"]
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_dw15k")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ExclamationMark:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../ExclamationMark:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}

[sub_resource type="Animation" id="Animation_kp5wf"]
resource_name = "exclamation_mark"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ExclamationMark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ExclamationMark:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(0.0796602, 0.0796602),
"update": 0,
"values": [Vector2(0, -18), Vector2(0, -25)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"catch_fish_minigame"
}]
}

[sub_resource type="Animation" id="Animation_s7pfm"]
resource_name = "fish"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.6333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-5, 0), Vector2(-5, 0), Vector2(-13, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_dw15k"), ExtResource("5_wwgf2")]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cast_rod"
}]
}

[sub_resource type="Animation" id="Animation_3abcg"]
resource_name = "pickup_fish"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-5, 0), Vector2(-13, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimatedSprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_wwgf2"), ExtResource("4_dw15k")]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"get_rid_of_line"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tgl8m"]
_data = {
"RESET": SubResource("Animation_jbqof"),
"exclamation_mark": SubResource("Animation_kp5wf"),
"fish": SubResource("Animation_s7pfm"),
"pickup_fish": SubResource("Animation_3abcg")
}

[sub_resource type="Gradient" id="Gradient_ekg3f"]
offsets = PackedFloat32Array(0, 0.506173, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.603923, 0.603923, 0.603923, 1, 0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_cfdpi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f2ped")
animation = &"run"
autoplay = "idle"
frame_progress = 0.149674

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_ew1q4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_dycmf")

[node name="FishingRod" parent="." instance=ExtResource("3_ha4rm")]
position = Vector2(13, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FishingRod"]
libraries = {
"": SubResource("AnimationLibrary_tgl8m")
}

[node name="Line2D" type="Line2D" parent="FishingRod"]
position = Vector2(-13, 0)
width = 1.0
gradient = SubResource("Gradient_ekg3f")

[node name="Timer" type="Timer" parent="."]
wait_time = 24.0
one_shot = true

[node name="ExclamationMark" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -18)
texture = ExtResource("6_gxe61")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
